--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "eslint": "^8.51.0",
