--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+#Configuración para la base de datos
 PORT_URL=
 PORT=
 DB_NAME=
@@ -5,5 +6,18 @@ DB_USER=
 DB_PASSWORD=
 HOST=
 
+#URL conexion con mongodb
+MONGO_URI=
+
+#identificador para saber si esta en produccion o desarrollo
+NODE_ENV=
+
 #Para encryptar el JWT
 SECRETORPRIVATEDKEY=
+
+#Configuración para el correo electroncio
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SECURE=
+SMTP_USER=
+SMTP_PASS=
